# jt-doc-tools

./: API.md  CHANGELOG.md  README.md  TEST_PLAN.md  install.sh  pyproject.toml  requirements.txt  setup-python.cmd
app/: cli.py  main.py
app/admin/: auth_router.py  router.py
app/admin/templates/: admin_directory.html  admin_groups.html  admin_sso.html  vat_db.html
app/core/: auth_ldap.py  csrf.py  roles.py  vat_db.py
app/tools/pdf_ocr/: ocr_core.py  router.py
app/tools/pdf_pageno/: router.py
app/tools/pdf_stamp/templates/: pdf_stamp.html
app/tools/pdf_to_markdown/: __init__.py  router.py
app/tools/pdf_to_markdown/templates/: pdf_to_markdown.html
app/tools/pdf_to_office/: router.py
app/tools/pdf_watermark/: router.py
app/tools/pdf_watermark/templates/: pdf_watermark.html
app/tools/scan_merge/: __init__.py  detector.py  router.py
app/tools/scan_merge/templates/: scan_merge.html
docs/: api.html  index.html
static/css/: platform.css
static/js/: csrf.js  custom_select.js
tests/: test_auth_middleware.py  test_csrf.py  test_directory_browser.py  test_path_traversal_audit.py  test_pdf_to_office_api_engine.py  test_pdf_watermark.py  test_pdf_watermark_batch.py  test_scan_merge_api.py  test_scan_merge_detector.py  test_vat_db.py  test_vat_upload_and_group_sync.py
