[project]
name = "jt-doc-tools"
version = "1.12.33"
description = "Jason Tools 文件工具箱 — 整合式 PDF / Office 文件處理平台"
authors = [{ name = "Jason Cheng (Jason Tools)", email = "jason@jason.tools" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"

# 升 starlette 1.x 前已把全站 81 處 TemplateResponse 改成新簽名
# (TemplateResponse(request, name, ctx))，0.52 與 1.x 都相容。要再升大版請先在
# dev 端跑完整 pytest 驗證再放寬。
dependencies = [
    "fastapi>=0.124.0,<0.140",
    "uvicorn[standard]>=0.32.0,<0.40",
    # CVE 補丁底線：
    # - starlette>=1.3.1（v1.12.7 升）：修 Windows StaticFiles UNC SSRF/NTLM 竊取
    #   (High) + request.form() limit DoS (High) + Host header url.path 污染 BADHOST
    #   + getattr method dispatch + url.hostname 污染。1.x 改 TemplateResponse 簽名，
    #   已全站遷移。0.x 早期的 Range header O(n²) DoS 一併涵蓋。
    # - jinja2>=3.1.6：3 個 sandbox breakout (filename / format / attr filter)
    # - Pillow>=12.2.0：FITS GZIP bomb / PSD OOB / PSD Tile Integer Overflow /
    #   PDF Trailer InfLoop / Font Integer Overflow / Nested coords heap overflow
    "starlette>=1.3.1,<2",
    # python-multipart>=0.0.32：querystring quadratic DoS (High) + semicolon
    # 分隔符 / Content-Disposition RFC2231 走私 / 負 Content-Length buffer 修補
    "python-multipart>=0.0.32,<0.1",
    # cryptography>=49：舊版 wheel 內含有漏洞的 OpenSSL (High)；也是 SSO
    # (Fernet / PyJWT RS256 / xmlsec) 直接依賴，顯式鎖下限。
    "cryptography>=49.0.0,<50",
    "jinja2>=3.1.6,<4",
    "pydantic>=2.9.0,<3",
    "pydantic-settings>=2.14.2,<3",
    "PyMuPDF>=1.26.0,<2",
    # pymupdf4llm — PyMuPDF 官方 RAG / Markdown 輸出套件,給 pdf-to-markdown 工具
    # 鎖在 0.3.x:1.27.x 要求 pymupdf==1.27.2.3 + onnxruntime(~100MB ML layout)太重,
    # 0.3.x 已能滿足純文檔 / 手冊類 PDF 的 markdown 需求
    "pymupdf4llm>=0.3.0,<0.4",
    # markdown-it-py — CommonMark + GFM 解析器,給 markdown-to-doc 工具
    # MIT licensed,純 Python,~150KB,支援 table / code / footnote / strikethrough
    "markdown-it-py>=3.0,<4",
    "Pillow>=12.2.0,<13",
    "pdfplumber>=0.11.0",
    # pyzipper 0.4.0 修了 small-file encryption bypass (Dependabot #45 Moderate)
    "pyzipper>=0.4.0",
    "httpx>=0.27,<1",
    # idna>=3.15：CVE-2026-45409 (= CVE-2024-3651 不完整修補) — idna.encode()
    # 對特製輸入會耗大量資源 (DoS, CWE-1333)。idna 為 httpx / fastapi / starlette
    # 的 transitive dep，明確設下限避免 lock 退回 < 3.15。
    "idna>=3.15,<4",
    "python-docx>=1.0.0",
    "odfpy>=1.4",
    # Excel xlsx export — translate-doc 匯出試算表用 (v1.7.51)。純 Python 無
    # native deps，跨平台 wheel 都有。比 xlsxwriter 慣用面廣（Pandas / Anaconda
    # 預設用 openpyxl）。
    "openpyxl>=3.1,<4",
    # pdf-to-office (Sprint 1) — pdf2docx 是目前唯一輸出真正可編輯 Word 物件的開源
    # PDF→docx 引擎。上游 (Artifex) 2026 釋出 0.5.13 後停止維護，已轉 MIT。我們鎖
    # 死版本 + fork 計畫；THIRD-PARTY-NOTICES.md 標註自維護。
    "pdf2docx>=0.5.13,<0.6",
    # rapidfuzz — pdf-to-office 的 docx↔PDFTruth alignment 模糊比對引擎（比 difflib 快 10x+）。
    "rapidfuzz>=3.0,<4",
    # numpy — 直接 import：pdf-to-office table_borders_from_image fixer（頂層）+
    # ocr_engine 影像前處理。原本靠 easyocr/opencv 的 transitive 帶入，但程式直接
    # 使用，須顯式宣告（避免日後 transitive 變動破壞）。
    "numpy>=1.26,<3",
    # lxml — 直接 import：pdf-to-office docx_builder 寫 w:drawing anchor XML。
    # 原本靠 python-docx transitive 帶入，直接使用須顯式宣告。
    "lxml>=4.9,<7",
    "ldap3>=2.9.1,<3",
    # SSO（OIDC + SAML，v1.12 起）— 與本機 / LDAP / AD 並存的附加登入方式。
    #   PyJWT：純 Python，驗 OIDC id_token 的 JWKS 簽章（RS256 需 cryptography，已是依賴）。
    #   python3-saml (onelogin)：SAML 2.0 SP；依賴 xmlsec 做 XML 簽章驗證。
    #   xmlsec：1.3.x 起三平台（含 Windows）都有預編 wheel，pip 直接裝免系統函式庫。
    "PyJWT>=2.8,<3",
    "python3-saml>=1.16,<2",
    "xmlsec>=1.3.14,<2",
    # OCR — soft optional. Used by pdf-editor when extracting text from
    # PDFs whose Identity-H subset font has a missing/identity ToUnicode CMap
    # (PyMuPDF returns garbage like 翕⊕ㄱ instead of 登入系統). pytesseract
    # itself is just a thin CLI wrapper; the actual heavy lifting needs the
    # `tesseract` system binary + `chi_tra` traineddata installed via apt /
    # brew / choco. Code path is `try: import pytesseract` — missing pkg or
    # binary degrades to "ask user to retype" UX, never breaks anything.
    "pytesseract>=0.3.10,<0.4",
    # EasyOCR — 中日韓 OCR 主引擎（v1.7.2 起，識別率明顯比 tesseract 強）。
    # 來源：JaidedAI（泰國），Apache-2.0，無中國背景敏感問題。
    # 重型依賴：pulls in PyTorch (~700MB) + opencv (~50MB) + others。
    # 預設下載 ~150MB 中英訓練模型到 ~/.EasyOCR/model/（首次 OCR 時）。
    # 失敗 graceful 降級回 tesseract（OCR 引擎抽象層自動切）。
    "easyocr>=1.7,<2",
    # 主機資源監控 — admin 系統狀態頁顯示 CPU / RAM / disk / network / IO。
    # 純 Python C-extension，每 OS 都有 wheel，跑不到 import 時 admin 頁
    # 改顯示「未安裝」warning，core 工具不受影響。
    "psutil>=5.9,<7",
    # TOTP 2FA — 稽核員角色強制啟用，其他角色可選。pyotp 純 Python；
    # qrcode + Pillow (Pillow 已是依賴) 用來生 setup 頁面的 QR code PNG。
    "pyotp>=2.9,<3",
    "qrcode>=7.4,<9",
    # einvoice-scan v1.7.70：解 QR Code 用 pyzbar (zbar Python wrapper)，
    # 含 LGPL-2.1 zbar shared lib。Linux 需 apt install libzbar0；macOS
    # brew install zbar；Windows wheel 已內含 dll。如果系統無 zbar binary
    # tool 啟動仍 OK（_probe），只是 scan 端點會回 503 提示。
    "pyzbar>=0.1.9,<0.2",
]

[project.scripts]
jtdt = "app.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "temp*", "data*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
